--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div id="form-container">
+        <div id="background">
+            <div id="logo">
+                <img src="img/odin-lined.png" alt="The Odin Project Logo"> <span>ODIN</span>
+            </div>
+        </div>
+        <div id="form">
+        </div>
+    </div>
+</body>
+</html>
