--- a/index.html
+++ b/index.html
@@ -15,39 +15,47 @@
             </div>
         </div>
         <div id="form">
-            <form action="">
-                <div class="names">
-                    <div class="firstName">
-                        <label for="firstName">FIRST NAME</label>
-                        <input type="text">
+            <form action="" name="signUpForm" method="post">
+                <div class="formbox">
+                    <h2>Let's do this!</h2>
+                    <div class="names">
+                        <div class="firstName">
+                            <label for="firstName">FIRST NAME</label>
+                            <input type="text">
+                        </div>
+                        <div class="lastName">
+                            <label for="lastName">LAST NAME</label>
+                            <input type="text">
+                        </div>
                     </div>
-                    <div class="lastName">
-                        <label for="lastName">LAST NAME</label>
-                        <input type="text">
+                    <div class="emailphone">
+                        <div class="email">
+                            <label for="email">EMAIL</label>
+                            <input type="email" name="email" id="email">
+                        </div>
+                        <div class="phoneNumber">
+                            <label for="phoneNumber">PHONE NUMBER</label>
+                            <input type="number" name="phoneNumber" id="phoneNumber">
+                        </div>
+                    </div>
+                    <div class="passwordcontain">
+                        <div class="password">
+                            <label for="password">PASSWORD</label>
+                            <input type="password" name="password" id="password">
+                        </div>
+                        <div class="passwordConfirm">
+                            <label for="passwordConfirm">CONFIRM PASSWORD</label>
+                            <input type="password" name="passwordConfirm" id="passwordConfirm">
+                        </div>
                     </div>
                 </div>
-                <div class="emailphone">
-                    <div class="email">
-                        <label for="email">EMAIL</label>
-                        <input type="email" name="email" id="email">
-                    </div>
-                    <div class="phoneNumber">
-                        <label for="phoneNumber">PHONE NUMBER</label>
-                        <input type="number" name="phoneNumber" id="phoneNumber">
-                    </div>
-                </div>
-                <div class="passwordcontain">
-                    <div class="password">
-                        <label for="password">PASSWORD</label>
-                        <input type="password" name="password" id="password">
-                    </div>
-                    <div class="passwordConfirm">
-                        <label for="passwordConfirm">CONFIRM PASSWORD</label>
-                        <input type="password" name="passwordConfirm" id="passwordConfirm">
-                    </div>
+                <div id="submit">
+                    <button type="submit">Create Account</button>
                 </div>
             </form>
+            
         </div>
+        
     </div>
 </body>
 </html>
